# QtWithCuda

./: CMakeLists.txt  README.md  kernel.cu  main.cpp
